@@ -12,6 +12,10 @@ ikiwiki (3.20130904.2) UNRELEASED; urgency=low
     break some setups where not all files get committed to git.
   * comments: Write pending moderation comments to the transient underlay
     to avoid conflict with only_committed_changes.
+  * search: Added googlesearch option, which makes it search google
+    rather than using the internal xapain database.
+    (googlesearch plugin is too hard to turn on when xapain databases
+    corrupt themselves, which happens all too frequently).
 
  -- Joey Hess <joeyh@debian.org>  Thu, 05 Sep 2013 10:01:10 -0400
 
